--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100%;
+}
+
 body {
   @extend %opensans-400;
   font-size: 14px;
@@ -5,7 +10,12 @@ body {
   letter-spacing: 0.03em;
   background-color: $white;
   color: $dark-900;
-  // display: flex;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
 }
 
 .container {
@@ -31,8 +41,7 @@ body {
   min-width: 158px;
   height: 50px;
   background-color: $dark-800;
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
+  border-radius: 0 6px 6px 0;
   padding: 15px 52px;
   @extend %opensans-600;
   color: $white;
