--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,4 +1,4 @@
-$green-900: #63A60F;
+$green-900: #63A60E;
 $green-200: #E0EDCF;
 $green-100: #EFF6E7;
 $dark-900: #121212;
@@ -41,7 +41,7 @@ $white: #FFFFFF;
   font-weight: 900;
 }
 
-%signika {
+%signika-700 {
   font-family: 'Signika-Bold', sans-serif;
   font-weight: 700;
 }
