--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,8 +2,10 @@
 @import 'fonts';
 @import 'reset';
 @import 'global';
+@import 'libs';
 @import 'header';
 @import 'footer';
+@import 'slider-top';
 
 
 @import 'media';
