added service section

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'OpenSans-Light', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  src: local('OpenSans-Light'),
+    url('../fonts/OpenSans-Light.woff2'),
+    url('../fonts/OpenSans-Light.woff');
+  font-display: swap;
+}
+
 @font-face{
   font-family: 'OpenSans-Regular', sans-serif;
   font-weight: 400;
@@ -29,12 +39,32 @@
 }
 
 @font-face {
+  font-family: 'Ruda-Regular', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  src: local('Ruda-Regular'),
+    url('../fonts/Ruda-Regular.woff2'),
+    url('../fonts/Ruda-Regular.woff');
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'Ruda-SemiBold', sans-serif;
   font-weight: 600;
   font-style: normal;
   src: local('Ruda-SemiBold'),
     url('../fonts/Ruda-SemiBold.woff2'),
     url('../fonts/Ruda-SemiBold.woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Ruda-Bold', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  src: local('Ruda-Bold'),
+    url('../fonts/Ruda-Bold.woff2'),
+    url('../fonts/Ruda-Bold.woff');
   font-display: swap;
 }
 
