--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -11,9 +11,9 @@ $silver-600: #C1C1C1;
 $silver-100: #F6F6F6;
 $white: #FFFFFF;
 
-%border-bottom {
-  border-bottom: 1px solid #fff;
-  opacity: 0.1;
+%opensans-300 {
+  font-family: 'OpenSans-Light', sans-serif;
+  font-weight: 300;
 }
 
 %opensans-400 {
@@ -32,8 +32,18 @@ $white: #FFFFFF;
 }
 
 %ruda-600 {
+  font-family: 'Ruda-Regular', sans-serif;
+  font-weight: 400;
+}
+
+%ruda-600 {
   font-family: 'Ruda-SemiBold', sans-serif;
   font-weight: 600;
+}
+
+%ruda-900 {
+  font-family: 'Ruda-Bold', sans-serif;
+  font-weight: 700;
 }
 
 %ruda-900 {
@@ -44,4 +54,9 @@ $white: #FFFFFF;
 %signika-700 {
   font-family: 'Signika-Bold', sans-serif;
   font-weight: 700;
+}
+
+%border-bottom {
+  border-bottom: 1px solid #fff;
+  opacity: 0.1;
 }
