added styleguide header

--- a/app/scss/slider-top.scss
+++ b/app/scss/slider-top.scss
@@ -3,9 +3,8 @@
     padding: 142px 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    height: calc(100vh - 160px);     
-    // height: 600px;
+    background-position: center;    
+    height: 600px;
   }
 
   &__content {
