--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -24,6 +24,18 @@
   &__top-link {
     color: $white;
     position: relative;
+
+    &:focus {
+      color: $white;
+    }
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    &:active {
+      color: $green-200;
+    }
   }
 
   &__top-link::before {
@@ -107,6 +119,7 @@
 
   &__search-block {
     position: relative;
+    transition: 0.5s;
   }
 
   &__search-block::before {
@@ -120,6 +133,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+    //  тут тоже не получается сделать стайлгайд
+    &:hover {
+      background-color: #FFFFFF;
+      opacity: 0.1;
+      border-radius: 3px;
+    }
   }
 
   &__search-input {
@@ -133,49 +153,65 @@
 
   &__user-nav {
     display: flex;
-    padding-left: 58px;
+  }
+
+  &__user-item {
+    position: relative;
+  }
+
+  &__user-item:not(:last-child) {
+    margin-right: 32px;
   }
 
   &__user-link {
-    position: relative;
+    display: block;
     padding-right: 31px;
-  }
-
-  &__user-link::before {
-    content: '';
-    position: absolute;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     width: 32px;
-    top: -8px;
-    left: 0;
+    height: 32px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: opacity 0.5s;
+
+    // padding: 11px 15px;
+    // как сделать чтобы при стайлгайде фон был а картинки оставались белыми, и чтобы захватывало также и кружек с цифрой?
+    &:hover {
+      background-color: #FFFFFF;
+      opacity: 0.1;
+      border-radius: 3px;
+    }
+
+    &:focus {
+      background-color: rgba(255, 255, 255, 0.1);
+      box-shadow: inset 0px 0px 0px 3px #EFF6E7;
+      border-radius: 3px;
+    }
   }
 
-  &__user-link--icon-user::before {
+  &__user-link--icon-user {
     background-image: url(../images/icons/icon-user.svg);
     width: 25px;
-    height: 32px;
   }
 
-  &__user-link--icon-heart::before {
+  &__user-link--icon-heart {
     background-image: url(../images/icons/icon-heart.svg);
     height: 29px;
   }
 
-  &__user-link--icon-cart::before {
+  &__user-link--icon-cart {
     background-image: url(../images/icons/icon-cart.svg);
     height: 31px;
   }
 
+  // не хотят цифры по центру становится 
   &__user-num {
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     border-radius: 50%;
     background-color: $white;
-    top: 10px;
-    left: 10px;
+    top: -7px;
+    right: 22px;
     @extend %opensans-600;
     font-size: 10px;
     color: $red-900;
@@ -196,5 +232,13 @@
 
   &__list-link {
     color: $white;
+
+    &:focus {
+      background-color: rgba(255, 255, 255, 0.0001);
+      box-shadow: 0px 0px 0px 3px #EFF6E7;
+      border-radius: 3px;
+    }
   }
+
+
 }
