--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -85,6 +85,21 @@
     display: flex;
     justify-content: space-between;
   }
+
+  &__social-list:hover {
+    opacity: 0.5;
+  }
+
+  &__social-list:focus {
+    background-color: rgba(255, 255, 255, 0.0001);
+    box-shadow: 0px 0px 0px 3px #E0EDCF;
+    border-radius: 3px;
+  }
+
+  //  тут не выходит как на макете
+  &__social-list:active {
+    border-color: $green-200;
+  }
 }
 
 .footer-bottom {
