--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,2 +1,3 @@
 
-@import '../../node_modules/slick-carousel/slick/slick.scss'
+@import '../../node_modules/slick-carousel/slick/slick.scss';
+// @import '../../node_modules/mixitup/dist/mixitup'; показывает ошибку, смотрела в ноте модульс саму папку михитаб, то не нашла нигде mixitup.css или scss
