--- a/app/scss/product.scss
+++ b/app/scss/product.scss
@@ -1,11 +1,14 @@
+
+// шрифт не такой как в макете, жирнее, я  переустанавливала шрифты, но все ровно не такой 
 .product {
   padding: 72px 0 71px;
+  text-align: center;
 
+  // не нашла кто перебивает и не дает сработать  margin-bottom: 51px;
   &__list {
     display: flex;
     justify-content: center;
     margin-bottom: 51px;
-    text-align: center;
   }
 
   &__item:not(:last-child) {
@@ -35,6 +38,7 @@
     grid-gap: 31px 30px;
     margin-bottom: 48px;
   }
+
   &__link {
     font-size: 18px;
     line-height: 1.3;
@@ -44,7 +48,6 @@
     border: 1px solid #63A60E;
     box-sizing: border-box;
     border-radius: 6px;
-    text-align: center;
   }
 }
 
@@ -62,7 +65,8 @@
     overflow: hidden;
     transition: all 0.5s;
   }
-// не получается сделать слайлгайд
+
+  // не получается сделать слайлгайд
   &__img-link {
     position: relative;
     overflow: hidden;
@@ -93,7 +97,6 @@
     padding: 3px 6px;
     background-color: $green-900;
     border-radius: 6px;
-    text-align: center;
     display: inline-block;
     margin-bottom: 6px;
   }
@@ -127,9 +130,11 @@
 
   &__title {
     @extend %opensans-600;
-    // margin: 18px 18px 9px 18px;
     padding: 0 18px;
-    height: 60px;
+    height: 66px;
+    text-align: left;
+    overflow: hidden;
+    transform: translateY(-13px);
   }
 
   &__price {
@@ -137,10 +142,13 @@
     justify-content: space-between;
     align-items: flex-end;
     margin: 9px 18px 18px 21px;
+    line-height: 1;
+    color: $dark-500;
   }
 
-  &__price-all {
-    align-items: flex-end;
+  &__old-price {
+    text-decoration: line-through;
+    color: $silver-600;
   }
 
   &__cart {
