--- a/app/scss/service.scss
+++ b/app/scss/service.scss
@@ -15,9 +15,7 @@
     &::before {
       content: '';
       position: absolute;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
+      @extend %bg-img;
       width: 50px;
       height: 50px;
       top: 0;
