--- a/app/scss/slider-top.scss
+++ b/app/scss/slider-top.scss
@@ -1,9 +1,7 @@
 .slider-top {
   &__item {
     padding: 142px 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;    
+    @extend %bg-img;
     height: 600px;
   }
 
@@ -51,7 +49,6 @@
   top: 50%;
   transform: perspective(-50%);
   z-index: 5;
-
 }
 
 .slick-prev {
