--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,89 +1,98 @@
 @font-face {
-  font-family: 'OpenSans-Light', sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  src: local('OpenSans-Light'),
+  font-family: 'OpenSans-Light';
+  src: 
+    local('OpenSans-Light'),
     url('../fonts/OpenSans-Light.woff2'),
     url('../fonts/OpenSans-Light.woff');
-  font-display: swap;
-}
-
-@font-face{
-  font-family: 'OpenSans-Regular', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
-  src: local('OpenSans-Regular'),
-       url('../fonts/OpenSans-Regular.woff2'),
-       url('../fonts/OpenSans-Regular.woff');
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'OpenSans-SemiBold', sans-serif;
-  font-weight: 600;
+  font-family: 'OpenSans-Regular';
+  src: 
+    local('OpenSans-Regular'),
+    url('../fonts/OpenSans-Regular.woff2'),
+    url('../fonts/OpenSans-Regular.woff');
+  font-weight: 400;
   font-style: normal;
-  src: local('OpenSans-SemiBold'),
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'OpenSans-SemiBold';
+  src: 
+    local('OpenSans-SemiBold'),
     url('../fonts/OpenSans-SemiBold.woff2'),
     url('../fonts/OpenSans-SemiBold.woff');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'OpenSans-Bold', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  src: local('OpenSans-Bold'),
-    url('../fonts/OpenSans-Bold.woff2'),
-    url('../fonts/OpenSans-Bold.woff');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Ruda-Regular', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  src: local('Ruda-Regular'),
-    url('../fonts/Ruda-Regular.woff2'),
-    url('../fonts/Ruda-Regular.woff');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Ruda-SemiBold', sans-serif;
   font-weight: 600;
   font-style: normal;
-  src: local('Ruda-SemiBold'),
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'OpenSans-Bold';
+  src: 
+    local('OpenSans-Bold'),
+    url('../fonts/OpenSans-Bold.woff2'),
+    url('../fonts/OpenSans-Bold.woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Ruda-Regular';
+  src: 
+    local('Ruda-Regular'),
+    url('../fonts/Ruda-Regular.woff2'),
+    url('../fonts/Ruda-Regular.woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Ruda-SemiBold';
+  src: 
+    local('Ruda-SemiBold'),
     url('../fonts/Ruda-SemiBold.woff2'),
     url('../fonts/Ruda-SemiBold.woff');
+  font-weight: 600;
+  font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Ruda-Bold', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  src: local('Ruda-Bold'),
+  font-family: 'Ruda-Bold';
+  src:
+    local('Ruda-Bold'),
     url('../fonts/Ruda-Bold.woff2'),
     url('../fonts/Ruda-Bold.woff');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Ruda-Black', sans-serif;
-  font-weight: 900;
-  font-style: normal;
-  src: local('Ruda-Black'),
-    url('../fonts/Ruda-Black.woff2'),
-    url('../fonts/Ruda-Black.woff');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Signika-Bold', sans-serif;
   font-weight: 700;
   font-style: normal;
-  src: local('Signika-Bold'),
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Ruda-Black';
+  src: 
+    local('Ruda-Black'),
+    url('../fonts/Ruda-Black.woff2'),
+    url('../fonts/Ruda-Black.woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Signika-Bold';
+  src:
+    local('Signika-Bold'),
     url('../fonts/Signika-Bold.woff2'),
     url('../fonts/Signika-Bold.woff');
+  font-weight: 700;
+  font-style: normal;
   font-display: swap;
 }
