--- a/app/scss/product.scss
+++ b/app/scss/product.scss
@@ -1,5 +1,4 @@
 
-// шрифт не такой как в макете, жирнее, я  переустанавливала шрифты, но все ровно не такой 
 .product {
   padding: 72px 0 71px;
   text-align: center;
@@ -60,7 +59,7 @@
   border-radius: 6px;
 
   &__img-box {
-    height: 225px;
+    height: 220px;
     position: relative;
     overflow: hidden;
     transition: all 0.5s;
@@ -134,14 +133,15 @@
     height: 66px;
     text-align: left;
     overflow: hidden;
-    transform: translateY(-13px);
+    transform: translateY(13px);
+    line-height: 1;
   }
 
   &__price {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    margin: 9px 18px 18px 21px;
+    margin: 14px 18px 18px 21px;
     line-height: 1;
     color: $dark-500;
   }
