--- a/app/scss/slider-top.scss
+++ b/app/scss/slider-top.scss
@@ -1,6 +1,6 @@
 .slider-top {
   &__item {
-    padding: 142px 0;
+    padding: 142px 180px;
     @extend %bg-img;
     height: 600px;
   }
@@ -13,19 +13,18 @@
     flex-direction: column;
   }
 
-  &__top-title {
+  &__title {
     color: $dark-500;
-    max-width: 950px;
+    max-width: 940px;
     width: 100%;
   }
 
-  // шрифт не такой как на макете, переутановила шрифты, но все ровно не такой, жирнее
   &__title {
     @extend %ruda-900;
     font-size: 60px;
     line-height: 1.3;
     text-transform: uppercase;
-    padding-bottom: 12px;
+    margin-bottom: 12px;
   }
 
   &__subtitle {
@@ -35,9 +34,10 @@
   &__text {
     font-size: 16px;
     line-height: 1.4;
-    padding-bottom: 32px;
+    margin-bottom: 32px;
   }
 }
+
 
 .slick-prev,
 .slick-next {
@@ -47,16 +47,19 @@
   cursor: pointer;
   position: absolute;
   top: 50%;
-  transform: perspective(-50%);
+  // не понимаю почему не хочет работать  transform: transition(-50%);
+  transform: transition(-50%);
   z-index: 5;
 }
 
 .slick-prev {
   left: 0;
   padding-left: 60px;
+
+}
+.slick-next {
+right: 0;
+padding-right: 60px;
+
 }
 
-.slick-next {
-  right: 0;
-  padding-right: 60px;
-}
