--- a/app/scss/product.scss
+++ b/app/scss/product.scss
@@ -1,6 +1,6 @@
 
 .product {
-  padding: 72px 0 71px;
+  padding-top: 72px;
   text-align: center;
 
   // не нашла кто перебивает и не дает сработать  margin-bottom: 51px;
