added styleguide index

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,12 +3,12 @@
 @import 'reset';
 @import 'global';
 @import 'libs';
-@import 'header';
-@import 'footer';
-@import 'slider-top';
-@import 'service';
-@import 'product';
-@import 'top-product';
+@import 'index/header';
+@import 'index/footer';
+@import 'index/slider-top';
+@import 'index/service';
+@import 'index/product';
+@import 'index/top-product';
 
 
 @import 'media';
