--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -37,6 +37,43 @@ body {
   overflow: hidden;
 }
 
+.logo {
+  transition:  0.3s ;
+  &:hover {
+    transform: scale(1.03);
+  }
+
+  &:focus {
+    outline: 4px solid $green-200;
+    border-radius: 6px;
+  }
+}
+
+
+.btn-green {
+  background-color: $green-900;
+  max-width: 181px;
+  width: 100%;
+  height: 47px;
+  color: $white;
+  font-size: 18px;
+  line-height: 1.3;
+  padding: 12px 24px;
+  border-radius: 6px;
+
+  &:hover {
+    background-color: #4D810C;
+  }
+
+  &:focus {
+    outline: solid 4px $green-200;
+  }
+
+  &:active {
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
+
 .btn-black {
   min-width: 158px;
   height: 50px;
@@ -47,18 +84,42 @@ body {
   color: $white;
   cursor: pointer;
   border: none;
+  text-transform: uppercase;
+
+  &:hover {
+    background-color: rgba(49, 53, 43, 0.85);
+  }
+
+  &:focus {
+    outline: 4px solid rgba(255, 255, 255, 0.5);
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.5);
+  }
 }
 
-.btn {
-  background-color: $green-900;
-  max-width: 181px;
-  width: 100%;
-  height: 47px;
-  color: $white;
+.btn-show {
   font-size: 18px;
   line-height: 1.3;
+  color: $green-900;
   padding: 12px 24px;
+  background-color: $white;
+  border: 1px solid #63A60E;
+  box-sizing: border-box;
   border-radius: 6px;
+    &:hover {
+      background-color: $green-100;
+    }
+
+    &:focus {
+      outline: 4px solid rgba(99, 166, 14, 0.5);
+    }
+
+    &:active {
+      box-shadow: inset 0px 10px 4px rgba(0, 0, 0, 0.1);
+       background-color: $white;
+    }
 }
 
 .title {
@@ -66,6 +127,22 @@ body {
   font-size: 32px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin-bottom: 29px;
   text-align: center;
+}
+
+// стайлгайд header__top / footer
+.stylegui {
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:focus {
+    outline: 3px solid $green-100;
+    border-radius: 3px;
+  }
+
+  &:active {
+    color: $green-200;
+  }
 }
