--- a/app/scss/index/footer.scss
+++ b/app/scss/index/footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  height: 337px;
   background-color: $dark-800;
 }
 
@@ -65,6 +64,7 @@
     color: $white;
     margin-bottom: 18px;
     display: block;
+    transition: 0.3s;
   }
 
   &__contact {
@@ -77,6 +77,7 @@
   &__address {
     color: $white;
     margin-bottom: 18px;
+    transition: 0.3s;
   }
 
   &__social {
@@ -86,19 +87,18 @@
     justify-content: space-between;
   }
 
-  &__social-list:hover {
-    opacity: 0.5;
-  }
-
-  &__social-list:focus {
-    background-color: rgba(255, 255, 255, 0.0001);
-    box-shadow: 0px 0px 0px 3px #E0EDCF;
-    border-radius: 3px;
-  }
-
-  //  тут не выходит как на макете
-  &__social-list:active {
-    border-color: $green-200;
+  &__social-link {
+    transition: 0.5s;
+    &:hover {
+      opacity: 0.5;
+    }
+    &:focus {
+      outline: 3px solid #E0EDCF;
+      border-radius: 3px;
+    }
+    &:active svg path {
+      fill: $green-200;
+    }
   }
 }
 
@@ -114,9 +114,9 @@
     text-transform: uppercase;
   }
 
-  &__payment-img {
+  &__img {
     position: relative;
-
+// лучше в нтмл через имг
     &::before {
       content: '';
       position: absolute;
@@ -125,16 +125,20 @@
       right: -11px;
       @extend %bg-img;
     }
+
+     &--viza::before {
+       background-image: url(../images/icons/icon-visa.svg);
+       width: 93px;
+       margin-right: 75px;
+     }
+
+      &--mc::before {
+        background-image: url(../images/icons/icon-mc.svg);
+        width: 49px;
+      }
   }
 
-  &__payment-img--viza::before {
-    background-image: url(../images/icons/icon-visa.svg);
-    width: 93px;
-    margin-right: 75px;
-  }
+ 
 
-  &__payment-img--mc::before {
-    background-image: url(../images/icons/icon-mc.svg);
-    width: 49px;
-  }
+ 
 }
