--- a/app/scss/index/header.scss
+++ b/app/scss/index/header.scss
@@ -1,40 +1,32 @@
-.header {
-  &__top {
-    background-color: $dark-800;
-    padding: 14px 0;
-  }
+.header-top {
+  background-color: $dark-800;
+  padding: 13px 0;
 
-  &__top-inner {
+  &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     @extend %opensans-700;
     font-size: 13px;
     line-height: 1.8;
+    text-transform: uppercase;
   }
 
-  &__top-info {
-    padding-left: 40px;
+  &__link:not(:last-child) {
+    margin-right: 45px;
   }
 
-  &__top-link:not(:last-child) {
-    padding-right: 82px;
-  }
-
-  &__top-link {
+  &__link {
     color: $white;
     position: relative;
+    transition: all 0.3s;
 
-    &:focus {
-      color: $white;
+    &--address {
+      padding-left: 44px;
     }
 
-    &:hover {
-      opacity: 0.7;
-    }
-
-    &:active {
-      color: $green-200;
+    &--tel {
+      padding-left: 34px;
     }
   }
 
@@ -42,27 +34,24 @@
     content: '';
     position: absolute;
     height: 22px;
+    left: 0;
+    top: -3px;
     @extend %bg-img;
   }
 
   &__top-link--address::before {
     background-image: url(../images/icons/icon-address.svg);
     width: 32px;
-    top: -5px;
-    left: -43px;
   }
 
   &__top-link--tel::before {
     background-image: url(../images/icons/icon-tel.svg);
     width: 22px;
-    top: -3px;
-    left: -33px;
   }
 }
 
-  .header-bottom {
-    background-color: $green-900;
-  
+.header-bottom {
+  background-color: $green-900;
 
   &__inner {
     display: flex;
@@ -87,35 +76,42 @@
     position: relative;
     border: none;
     margin-right: -42px;
+
+    &:hover {
+      background-color: #E0EDCF;
+      border-radius: 6px 6px 0px 0px;
+    }
   }
 
-  &__btn::before {
+  &__btn::before,
+  &__btn::after {
     content: '';
     position: absolute;
+    @extend %bg-img;
+  }
+
+
+  &__btn::before {
     background-image: url(../images/icons/nav_icon.svg);
     width: 25px;
     height: 17px;
     top: 16px;
     left: 18px;
-    @extend %bg-img;
-    cursor: pointer;
   }
 
   &__btn::after {
-    content: '';
-    position: absolute;
     background-image: url(../images/icons/icon-chevron.svg);
     width: 10px;
     height: 7.23px;
     top: 21px;
-    left: 207.12px;
-    @extend %bg-img;
-    cursor: pointer;
+    right: 18px;
+    background-size: auto;
+
   }
 
   &__search {
     display: flex;
-    margin-right: -12px;
+    margin-right: -8px;
   }
 
   &__search-block {
@@ -132,14 +128,6 @@
     top: 16px;
     left: 13px;
     @extend %bg-img;
-    cursor: pointer;
-
-    //  тут тоже не получается сделать стайлгайд
-    &:hover {
-      background-color: #FFFFFF;
-      opacity: 0.1;
-      border-radius: 3px;
-    }
   }
 
   &__search-input {
@@ -149,73 +137,87 @@
     color: $dark-800;
     border: none;
     padding: 15px 51px;
+    &:focus {
+      outline: solid 4px rgba(255, 255, 255, 0.5);
+    }
   }
 
   &__user-nav {
+    max-width: 155px;
+    width: 100%;
     display: flex;
+    justify-content: space-evenly;
+  }
+
+  &__user-link {
+    position: relative;
+    transition: all 0.5s;
+
+    &:hover::before {
+      background-color: rgb(255, 255, 255, 0.1);
+      border-radius: 3px;
+    }
+
+    &:focus::before {
+      outline: 3px solid $green-100;
+      border-radius: 3px;
+    }
+
+    &:active {
+      opacity: 0.1;
+      border-radius: 3px;
+    }
+  }
+
+  &__user-link::before {
+    content: '';
+    position: absolute;
+    @extend %bg-img;
+    top: -26px;
+    right: -17px;
+    width: 50px;
+    height: 50px;
+    background-size: auto;
+
+  }
+
+  &__user-link--user::before {
+    background-image: url(../images/icons/icon-user.svg);
+    margin-right: 24px;
+  }
+
+  &__user-link--heart::before {
+    background-image: url(../images/icons/icon-heart.svg);
+    right: -15px;
+    margin-right: -1px;
+  }
+
+  &__user-link--cart::before {
+    background-image: url(../images/icons/icon-cart.svg);
+    margin-right: -23px;
   }
 
   &__user-item {
     position: relative;
   }
 
-  &__user-item:not(:last-child) {
-    margin-right: 32px;
-  }
-
-  &__user-link {
-    display: block;
-    padding-right: 31px;
-    width: 32px;
-    height: 32px;
-    @extend %bg-img;
-    background-size: contain;
-    transition: opacity 0.5s;
-
-    // padding: 11px 15px;
-    // как сделать чтобы при стайлгайде фон был а картинки оставались белыми, и чтобы захватывало также и кружек с цифрой?
-    &:hover {
-      background-color: #FFFFFF;
-      opacity: 0.1;
-      border-radius: 3px;
-    }
-
-    &:focus {
-      background-color: rgba(255, 255, 255, 0.1);
-      box-shadow: inset 0px 0px 0px 3px #EFF6E7;
-      border-radius: 3px;
-    }
-  }
-
-  &__user-link--user {
-    background-image: url(../images/icons/icon-user.svg);
-    width: 25px;
-  }
-
-  &__user-link--heart {
-    background-image: url(../images/icons/icon-heart.svg);
-    height: 29px;
-  }
-
-  &__user-link--cart {
-    background-image: url(../images/icons/icon-cart.svg);
-    height: 31px;
-  }
-
-  // не хотят цифры по центру становится 
   &__user-num {
     position: absolute;
     width: 18px;
     height: 18px;
     border-radius: 50%;
     background-color: $white;
-    top: -7px;
-    right: 22px;
+    top: -22px;
+    right: 13px;
     @extend %opensans-600;
     font-size: 10px;
     color: $red-900;
     text-align: center;
-    line-height: 1;
+    line-height: 18px;
+
+    &--two {
+      right: -10px;
+    }
   }
 }
 
@@ -225,18 +227,12 @@
     justify-content: space-between;
   }
 
-  &__list-item:not(:last-child) {
+  &__item:not(:last-child) {
     padding-right: 24px;
   }
 
-  &__list-link {
+  &__link {
     color: $white;
-
-    &:focus {
-      background-color: rgba(255, 255, 255, 0.0001);
-      box-shadow: 0px 0px 0px 3px #EFF6E7;
-      border-radius: 3px;
-    }
+    transition: all 0.3s;
   }
 }
-
