--- a/app/scss/index/service.scss
+++ b/app/scss/index/service.scss
@@ -1,11 +1,11 @@
 .service {
   background-color: $silver-100;
-  height: 146px;
-  padding-top: 48px;
+  padding: 47px 0 29px;
+  letter-spacing: 0;
 
   &__inner {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
   }
 
   &__item {
@@ -21,10 +21,15 @@
       top: 0;
       left: 0;
     }
-  }
-//не выходит расставить как на макете по перфекту
-  &__item:not(:last-child) {
-    margin-right: -145px;
+
+    &--scooter,
+    &--box {
+      margin-right: 65px;
+    }
+
+    &--24-hours {
+      margin-right: 53px;
+    }
   }
 
   &__item--scooter::before {
@@ -39,16 +44,17 @@
     background-image: url(../images/service-24-hours.svg);
   }
 
-  &__item-title {
+  &__name {
     @extend %opensans-600;
     font-size: 16px;
     margin-bottom: 6px;
   }
 
-  &__item-text {
+  &__text {
     color: $dark-500;
     max-width: 190px;
     width: 100%;
-
   }
+
+
 }
