--- a/app/scss/index/slider-top.scss
+++ b/app/scss/index/slider-top.scss
@@ -1,6 +1,8 @@
 .slider-top {
+  letter-spacing: 0;
+
   &__item {
-    padding: 142px 180px;
+    padding: 142px;
     @extend %bg-img;
     height: 600px;
   }
@@ -15,16 +17,14 @@
 
   &__title {
     color: $dark-500;
-    max-width: 940px;
+    max-width: 930px;
     width: 100%;
-  }
-
-  &__title {
     @extend %ruda-900;
     font-size: 60px;
     line-height: 1.3;
     text-transform: uppercase;
-    margin-bottom: 12px;
+    margin-bottom: 9px;
+    letter-spacing: 0;
   }
 
   &__subtitle {
@@ -35,9 +35,9 @@
     font-size: 16px;
     line-height: 1.4;
     margin-bottom: 32px;
+    letter-spacing: 0;
   }
 }
-
 
 .slick-prev,
 .slick-next {
@@ -47,19 +47,41 @@
   cursor: pointer;
   position: absolute;
   top: 50%;
-  // не понимаю почему не хочет работать  transform: transition(-50%);
-  transform: transition(-50%);
+  transform: translateY(-50%);
   z-index: 5;
+
+  &:hover svg path {
+    fill: $green-900;
+  }
+
+  &:hover svg rect {
+    fill: $green-200;
+  }
+
+  &:focus svg {
+    outline: 3px solid rgba(99, 166, 14, 0.5);
+    border-radius: 6px;
+  }
+
+  &:active svg path {
+    fill: $green-900;
+  }
+
+  &:active svg rect {
+    fill: #F3F3F2;
+  }
 }
 
 .slick-prev {
   left: 0;
   padding-left: 60px;
-
 }
+
 .slick-next {
-right: 0;
-padding-right: 60px;
+  right: 0;
+  padding-right: 60px;
 
 }
-
+.slick-disabled svg path {
+  fill: #C1C1C1;
+}
