--- a/app/scss/index/footer.scss
+++ b/app/scss/index/footer.scss
@@ -1,15 +1,16 @@
 .footer {
   background-color: $dark-800;
+  letter-spacing: 0;
 }
 
 .footer-top {
-  padding: 30px 0 15px;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 30px 0 26px;
+  display: grid;
+  grid-template-columns: repeat(3, 30% 46% 20%);
+  grid-gap: 71px;
 
   &__logo {
-    margin-bottom: 30px;
+    padding-top: 30px;
     display: block;
   }
 
@@ -50,14 +51,8 @@
     cursor: pointer;
   }
 
-  &__wrap {
-    display: flex;
-    justify-content: space-between;
-    padding: 90px 0 12px 0;
-  }
-
-  &__box:not(:last-child) {
-    margin-right: 76px;
+  &__list {
+    column-count: 3;
   }
 
   &__link {
@@ -70,7 +65,7 @@
   &__contact {
     display: flex;
     flex-direction: column;
-    padding-top: 90px;
+    margin-left: -48px;
   }
 
   &__phone,
@@ -81,7 +76,7 @@
   }
 
   &__social {
-    max-width: 155px;
+    max-width: 163px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -89,13 +84,16 @@
 
   &__social-link {
     transition: 0.5s;
+
     &:hover {
       opacity: 0.5;
     }
+
     &:focus {
       outline: 3px solid #E0EDCF;
       border-radius: 3px;
     }
+
     &:active svg path {
       fill: $green-200;
     }
@@ -104,8 +102,9 @@
 
 .footer-bottom {
   align-items: center;
-  padding: 28px 0 28px;
+  padding: 24px 0 25px;
   color: $white;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
 
   &__wrap {
     display: flex;
@@ -115,30 +114,11 @@
   }
 
   &__img {
-    position: relative;
-// лучше в нтмл через имг
-    &::before {
-      content: '';
-      position: absolute;
-      height: 29px;
-      top: -13px;
-      right: -11px;
-      @extend %bg-img;
+    display: flex;
+    justify-content: flex-end;
+
+    &--viza {
+      margin-right: 24px;
     }
-
-     &--viza::before {
-       background-image: url(../images/icons/icon-visa.svg);
-       width: 93px;
-       margin-right: 75px;
-     }
-
-      &--mc::before {
-        background-image: url(../images/icons/icon-mc.svg);
-        width: 49px;
-      }
   }
-
- 
-
- 
 }
