--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -38,7 +38,8 @@ body {
 }
 
 .logo {
-  transition:  0.3s ;
+  transition: 0.3s;
+
   &:hover {
     transform: scale(1.03);
   }
@@ -60,6 +61,7 @@ body {
   line-height: 1.3;
   padding: 12px 24px;
   border-radius: 6px;
+  transition: background-color 0.5s;
 
   &:hover {
     background-color: #4D810C;
@@ -85,6 +87,7 @@ body {
   cursor: pointer;
   border: none;
   text-transform: uppercase;
+  transition: background-color 0.5s;
 
   &:hover {
     background-color: rgba(49, 53, 43, 0.85);
@@ -108,18 +111,19 @@ body {
   border: 1px solid #63A60E;
   box-sizing: border-box;
   border-radius: 6px;
-    &:hover {
-      background-color: $green-100;
-    }
 
-    &:focus {
-      outline: 4px solid rgba(99, 166, 14, 0.5);
-    }
+  &:hover {
+    background-color: $green-100;
+  }
 
-    &:active {
-      box-shadow: inset 0px 10px 4px rgba(0, 0, 0, 0.1);
-       background-color: $white;
-    }
+  &:focus {
+    outline: 4px solid rgba(99, 166, 14, 0.5);
+  }
+
+  &:active {
+    box-shadow: inset 0px 10px 4px rgba(0, 0, 0, 0.1);
+    background-color: $white;
+  }
 }
 
 .title {
