--- a/app/scss/index/footer.scss
+++ b/app/scss/index/footer.scss
@@ -1,3 +1,4 @@
+// посмотри пожалуйста как на гридах пороскидала я эти блоки, а то творила как мгда но не факт что правильно....
 .footer {
   background-color: $dark-800;
   letter-spacing: 0;
@@ -49,6 +50,20 @@
     line-height: 1.6;
     padding: 12px 16px;
     cursor: pointer;
+    transition: background-color 0.5s;
+
+    &:hover {
+      background-color: #4D800C;
+    }
+
+    &:focus {
+      outline: 4px solid $green-200;
+    }
+
+    &:active {
+      background-color: #4D800C;
+      color: rgba(255, 255, 255, 0.5);
+    }
   }
 
   &__list {
