--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -50,12 +50,12 @@ body {
   }
 }
 
-
 .btn-green {
   background-color: $green-900;
   max-width: 181px;
   width: 100%;
   height: 47px;
+  border: none;
   color: $white;
   font-size: 18px;
   line-height: 1.3;
@@ -135,8 +135,46 @@ body {
   text-align: center;
 }
 
+.mixer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 51px;
+
+  &__item:not(:last-child) {
+    margin-right: 27px;
+  }
+
+  &__button {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    @extend %opensans-700;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: $dark-500;
+    border-bottom: 3px solid transparent;
+    transition: all 0.5s;
+    cursor: pointer;
+    border-bottom: transparent;
+
+    &:hover {
+      color: $green-900;
+    }
+
+    &:focus {
+      outline: 3px solid rgba(99, 166, 14, 0.2);
+      border-radius: 6px;
+    }
+
+    // не пойму работает или нет. Когда елементоре смотрю нажимаю fore state - active и срабатывет, а так или не хочет или не видно из-за фокуса 
+    &:active {
+      border-bottom: 3px solid $green-200;
+    }
+  }
+}
+
 // стайлгайд header__top / footer
-.stylegui {
+.link-white {
   &:hover {
     opacity: 0.7;
   }
