--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -5,14 +5,14 @@
 }
 
 .footer-top {
-  padding: 30px 0 26px;
+  padding: 24px 0 26px;
   display: grid;
-  grid-template-columns: repeat(3, 30% 46% 20%);
+  grid-template-columns: 30% 46% 20%;
   grid-gap: 71px;
 
   &__logo {
     padding-top: 30px;
-    display: block;
+    display: inline-block;
   }
 
   &__text {
@@ -35,37 +35,23 @@
     border: none;
     padding: 12px;
     line-height: 1;
+    &:focus {
+      outline: 4px solid #E0EDCF;
+    }
   }
 
   &__btn {
     max-width: 126px;
-    width: 100%;
     height: 40px;
     border-radius: 0 6px 6px 0;
-    border: none;
-    background-color: $green-900;
-    color: $white;
     text-transform: uppercase;
     font-size: 12px;
     line-height: 1.6;
     padding: 12px 16px;
     cursor: pointer;
-    transition: background-color 0.5s;
-
-    &:hover {
-      background-color: #4D800C;
-    }
-
-    &:focus {
-      outline: 4px solid $green-200;
-    }
-
-    &:active {
-      background-color: #4D800C;
-      color: rgba(255, 255, 255, 0.5);
-    }
   }
 
+// исправить при фокусе линии
   &__list {
     column-count: 3;
   }
@@ -77,10 +63,11 @@
     transition: 0.3s;
   }
 
-  &__contact {
+  &__info {
     display: flex;
     flex-direction: column;
     margin-left: -48px;
+    font-style: normal;
   }
 
   &__phone,
@@ -95,6 +82,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-left: -49px;
   }
 
   &__social-link {
@@ -108,7 +96,7 @@
       outline: 3px solid #E0EDCF;
       border-radius: 3px;
     }
-
+    
     &:active svg path {
       fill: $green-200;
     }
