--- a/app/scss/index/partners.scss
+++ b/app/scss/index/partners.scss
@@ -5,5 +5,18 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 0 -13px;
+  }
+
+  &__item {
+    cursor: pointer;
+  }
+
+  &__img {
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 }
