--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,8 +9,8 @@
 @import 'index/service';
 @import 'product';
 @import 'index/top-product';
-@import 'index/discount';
 @import 'index/partners';
+@import 'index/news';
 
 
 @import 'media';
