--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -174,7 +174,7 @@ body {
     text-transform: uppercase;
     color: $dark-500;
     border-bottom: 3px solid transparent;
-    transition: all 0.5s;
+    transition: color 0.5s;
     cursor: pointer;
     border-bottom: transparent;
     letter-spacing: 0.03em;
