--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -1,4 +1,3 @@
-// посмотри пожалуйста как на гридах пороскидала я эти блоки, а то творила как мгда но не факт что правильно....
 .footer {
   background-color: $dark-800;
   letter-spacing: 0;
@@ -6,13 +5,17 @@
 
 .footer-top {
   padding: 24px 0 26px;
-  display: grid;
-  grid-template-columns: 30% 46% 20%;
-  grid-gap: 71px;
+  display: flex;
+  justify-content: space-between;
 
   &__logo {
-    padding-top: 30px;
+    margin-top: 30px;
     display: inline-block;
+  }
+
+  &__item {
+    max-width: 306px;
+    width: 100%;
   }
 
   &__text {
@@ -52,17 +55,35 @@
     cursor: pointer;
   }
 
-  // не получается исправить при фокусе линию которая вылазит, минусовый марджин не сработал на нее
   &__list {
     column-count: 3;
-    // margin-top: -10px;
+    max-width: 462px;
+    width: 100%;
+    margin-right: 55px;
+    margin-top: -3px;
+  }
+
+  &__list-item {
+    padding-top: 3px;
+  }
+
+  &__list-item--2 {
+    transform: translateX(45px);
+  }
+
+  &__list-item--3 {
+    transform: translateX(91px);
   }
 
   &__link {
     color: $white;
-    margin-bottom: 18px;
+    margin-bottom: 16px;
     display: block;
     transition: 0.3s;
+  }
+
+  &__contact {
+    transform: translateX(-2px);
   }
 
   &__info {
@@ -89,6 +110,12 @@
 
   &__social-link {
     transition: 0.5s;
+    width: 32px;
+    height: 32px;
+
+    svg use {
+      fill: $white;
+    }
 
     &:hover {
       opacity: 0.5;
@@ -99,7 +126,7 @@
       border-radius: 3px;
     }
 
-    &:active svg path {
+    &:active svg use {
       fill: $green-200;
     }
   }
