--- a/app/scss/index/slider-top.scss
+++ b/app/scss/index/slider-top.scss
@@ -47,6 +47,8 @@
   cursor: pointer;
   position: absolute;
   top: 50%;
+  width: 60px;
+  height: 60px;
   transform: translateY(-50%);
   transition: color 0.5s;
   z-index: 5;
@@ -59,7 +61,7 @@
     fill: $green-200;
   }
 
-  &:focus svg {
+  &:focus {
     outline: 3px solid rgba(99, 166, 14, 0.5);
     border-radius: 6px;
   }
@@ -92,5 +94,5 @@
 }
 
 .slick-disabled:hover svg rect {
-  fill: rgba(255, 255, 255, 0.8);
+  fill: rgba(255, 255, 255);
 }
